added open graph tags to the doc page to be properly displayed when shared on social media

--- a/documentation/source/_templates/layout.html
+++ b/documentation/source/_templates/layout.html
@@ -8,5 +8,11 @@
 {% endblock %}
 
 
+{% block extrahead %}
+<meta property="og:title" content="Eclipse Qrisp" />
+<meta property="og:description" content="The next generation of quantum algorithm development." />
+<meta property="og:image" content="{{ pathto('qrisp_logo.png', 1) }}" />
+<meta property="og:url" content="https://www.qrisp.eu/" />
+<meta property="og:type" content="website" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+{% endblock %}
