--- a/documentation/source/_templates/thebe_button.html
+++ b/documentation/source/_templates/thebe_button.html
@@ -1,8 +1,7 @@
 {% block sidebar %}
 <div class="related">
   <div class="admonition note custom-box" style="margin-bottom: 150px !important; text-align: center;">
-    <p>
-      <h2 style="font-size: 1.3em; margin-top: 0.9em;"></h2>
+    <p style="margin-top: 0.9em;">
       Enable interactive documentation via
       <a href="https://thebe.readthedocs.io/en/stable/">{{ link_text|default('Thebe') }}.</a>
     </p>
