rn button to reflect it is used for different purposes

--- a/documentation/source/_templates/thebe_button.html
+++ b/documentation/source/_templates/thebe_button.html
@@ -5,7 +5,7 @@
       Enable interactive documentation via
       <a href="https://thebe.readthedocs.io/en/stable/">{{ link_text|default('Thebe') }}.</a>
     </p>
-    <button title="Start Kernel" class="thebelab-button thebe-launch-button" onclick="initThebe()" style="margin: 0 auto;">Start Kernel</button>
+    <button title="Start Kernel" class="sidebar-button sidebar-launch-button" onclick="initThebe()" style="margin: 0 auto;">Start Kernel</button>
     <p>
   </div>
 </div>
