--- a/documentation/source/_templates/dynamic_sidebar.html
+++ b/documentation/source/_templates/dynamic_sidebar.html
@@ -27,7 +27,7 @@
     </p>
 
     {% set filename = notebook_path.split('/')[-1] %}
-    <a href="{{ notebook_path }}" download="{{ filename }}" target="_blank" class="thebelab-button thebe-launch-button">Download
+    <a href="{{ notebook_path }}" download="{{ filename }}" target="_blank" class="sidebar-button sidebar-launch-button">Download
         Jupyter Notebook</a>
 
 </div>
