--- a/documentation/source/_templates/dynamic_sidebar.html
+++ b/documentation/source/_templates/dynamic_sidebar.html
@@ -10,7 +10,10 @@
         {% set is_notebook_page = false %}
     {% elif pagename.startswith('general/tutorial') %}
         {% set is_notebook_page = true %}
-        {% set notebook_path = '../../' + pagename + '.ipynb' %}
+        {% set path_parts = pagename.split('/') %}
+        {% set filename = path_parts[-1] %}
+        {# Create the path to the actual notebook file #}
+        {% set notebook_path = pagename + '.ipynb' %}
     {% elif pagename.endswith('.ipynb') or '.ipynb_' in pagename %}
         {% set is_notebook_page = true %}
         {% set notebook_path = '_sources/' + pagename %}
@@ -26,8 +29,8 @@
         Run it locally.
     </p>
 
-    {% set filename = notebook_path.split('/')[-1] %}
-    <a href="{{ notebook_path }}" download="{{ filename }}" target="_blank" class="sidebar-button sidebar-launch-button">Download
+    {% set filename = path_parts[-1] + '.ipynb' %}
+    <a href="/{{ pagename }}.ipynb" download="{{ filename }}" target="_blank" class="sidebar-button sidebar-launch-button">Download
         Jupyter Notebook</a>
 
 </div>
