fixed the thebelab button

--- a/documentation/source/_templates/thebe_button.html
+++ b/documentation/source/_templates/thebe_button.html
@@ -1,11 +1,12 @@
 {% block sidebar %}
 <div class="related">
   <div class="admonition note custom-box" style="margin-bottom: 150px !important; text-align: center;">
-    <p style="margin-top: 0.9em;">
+    <p>
+      <h2 style="font-size: 1.3em; margin-top: 0.9em;"></h2>
       Enable interactive documentation via
       <a href="https://thebe.readthedocs.io/en/stable/">{{ link_text|default('Thebe') }}.</a>
     </p>
-    <button title="Start Kernel" class="sidebar-button sidebar-launch-button" onclick="initThebe()" style="margin: 0 auto;">Start Kernel</button>
+    <button title="Start Kernel" class="thebelab-button thebe-launch-button" onclick="initThebe()" style="margin: 0 auto;">Start Kernel</button>
     <p>
   </div>
 </div>
