--- a/documentation/source/_templates/discord_link.html
+++ b/documentation/source/_templates/discord_link.html
@@ -4,7 +4,7 @@
       <h2 style="font-size: 1.3em; margin-top: 0.9em;">Get in touch!</h2>
       <p>
     If you are interested in Qrisp or high-level quantum algorithm research in general connect with us on our
-      <a href="https://join.slack.com/t/qrisp-workspace/shared_invite/zt-20yv9bbvo-igspbQpslCBK9ZlYSVijsw">{{ link_text|default('Slack workspace') }}.</a></p>
+      <a href="https://discord.gg/v5np7DeBaq">{{ link_text|default('Discord Server') }}.</a></p>
     </div>
   </div>
 {% endblock %}
